crates/sync_thunk_macros_impl/tests/snapshots/thunk_basic__pub_crate_visibility.snap
---
source: crates/sync_thunk_macros_impl/tests/thunk_basic.rs
expression: expand_thunk!(item)
---
impl Dummy {
    #[inline]
    #[doc(hidden)]
    #[allow(
        clippy::needless_pass_by_ref_mut,
        clippy::needless_pass_by_value,
        clippy::use_self,
        clippy::unused_self,
        unused_variables,
    )]
    fn __internal_work_inner(me: ::std::sync::Arc<Service>) -> u64 {
        42
    }
    #[doc(hidden)]
    #[allow(clippy::use_self)]
    fn __internal_work_shim(ptr: *mut ()) {
        #[repr(C)]
        #[allow(non_camel_case_types, dead_code)]
        struct __internal_work_RawTask<__ThunkImplSelf: ?Sized> {
            me: ::std::sync::Arc<Service>,
            _self_phantom: ::core::marker::PhantomData<fn() -> __ThunkImplSelf>,
        }
        let state = unsafe {
            &*ptr.cast::<::sync_thunk::StackState<u64, __internal_work_RawTask<Self>>>()
        };
        struct __DoneOnDrop<'a, R, T>(&'a ::sync_thunk::StackState<R, T>);
        impl<R, T> ::std::ops::Drop for __DoneOnDrop<'_, R, T> {
            fn drop(&mut self) {
                self.0.mark_worker_done();
            }
        }
        let __done_guard = __DoneOnDrop(state);
        let panic_result = ::std::panic::catch_unwind(
            ::std::panic::AssertUnwindSafe(|| {
                let task = unsafe { state.take_task() }
                    .expect("thunk task was set before dispatch");
                let me = task.me;
                Self::__internal_work_inner(me)
            }),
        );
        match panic_result {
            Ok(result) => {
                unsafe { state.complete(result) };
            }
            Err(payload) => {
                unsafe { state.mark_panicked(payload) };
            }
        }
        state.wake();
        ::core::mem::drop(__done_guard);
    }
    pub(crate) async fn internal_work(me: ::std::sync::Arc<Service>) -> u64 {
        #[repr(C)]
        #[allow(non_camel_case_types, dead_code)]
        struct __internal_work_RawTask<__ThunkImplSelf: ?Sized> {
            me: ::std::sync::Arc<Service>,
            _self_phantom: ::core::marker::PhantomData<fn() -> __ThunkImplSelf>,
        }
        unsafe impl<__ThunkImplSelf: ?Sized> Send
        for __internal_work_RawTask<__ThunkImplSelf> {}
        ::sync_thunk::__private::assert_send_static::<::std::sync::Arc<Service>>();
        let state = ::sync_thunk::StackState::<
            u64,
            __internal_work_RawTask<Self>,
        >::new();
        struct __AbandonOnPanic<'a, R, T>(&'a ::sync_thunk::StackState<R, T>);
        impl<R, T> ::std::ops::Drop for __AbandonOnPanic<'_, R, T> {
            fn drop(&mut self) {
                self.0.abandon();
            }
        }
        let __guard = __AbandonOnPanic(&state);
        let __thunk_sender = ::sync_thunk::__private::clone_thunker(&me.thunker);
        let raw_task = __internal_work_RawTask::<Self> {
            me,
            _self_phantom: ::core::marker::PhantomData,
        };
        unsafe {
            state.set_task(raw_task);
        }
        let work_item = unsafe {
            ::sync_thunk::WorkItem::new(
                state.as_mut_ptr().cast::<()>(),
                Self::__internal_work_shim,
            )
        };
        __thunk_sender.send(work_item);
        ::std::mem::forget(__guard);
        ::sync_thunk::ThunkFuture::new(&state).await
    }
}
